--- a/src/Controls/samples-gtk/Controls.Sample.MultiPage.GTK/MainPage.xaml
+++ b/src/Controls/samples-gtk/Controls.Sample.MultiPage.GTK/MainPage.xaml
@@ -3,7 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
     x:Class="Maui.Controls.Sample.MultiPage.GTK.MainPage"
-    WidthRequest="780" HeightRequest="600" >
+    WidthRequest="780" HeightRequest="600" 
+    BackgroundImageSource="unused_background.png">
     
     <ScrollView>
         <Grid RowSpacing="5" ColumnSpacing="5">
@@ -99,6 +100,8 @@
             <Image
                 Grid.Row="10" Grid.Column="0"
                 Source="click_me.gif"
+                HeightRequest="40"
+                WidthRequest="84"
                 HorizontalOptions="Center" />
 
             <HorizontalStackLayout Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3">
